# DA4RDM-RecSys-PM

./: README.md  pyproject.toml  requirements.txt
src/da4rdm_recsys/: Conformance.py  Extract.py  ModelFeatures.py  ModelMatrix.py  ModelRecommendation.py  TraceFeatures.py  TraceMatrix.py  TraceRecommendation.py
src/da4rdm_recsys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
