[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "da4rdm_recsys"
version = "0.0.2"
description = "Test Package that can be used to get recommendation based on process models and trace analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'matplotlib>=3.2.1',
  'numpy >= 1.21.6',
  'pandas >= 1.3.5',
  'python_dateutil >= 2.8.2',
  'scipy >= 1.4.1',
  'pm4py>=2.2.10.2',
  'scikit_learn>=0.22.1',
  'seaborn==0.11.2',
]

